cluster/kubernetes/apps/observability/goldilocks/app/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
spec:
  hostnames:
    - goldilocks.stevewm.dev
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          namespace: observability
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
